# tcp-echo-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
kustomize/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
server/: Cargo.toml
server/src/: main.rs
